⚙️ npm build 기반으로 github actions 수정
- github action 에 npm install/build step 추가
- /dist 만 s3 배포

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "22"
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build project
+        run: npm run build
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -23,7 +34,7 @@ jobs:
 
       - name: Deploy to S3
         run: |
-          aws s3 sync . s3://post.woodiny.com/ --delete --exclude ".git/*" --exclude ".github/*"
+          aws s3 sync ./dist s3://post.woodiny.com/ --delete
 
       - name: Invalidate CloudFront Cache
         run: |
